add classifier that uses count

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9543\n",
       "[0.55083179 0.66666667 0.88155922]\n",
       "0.8036013400335008\n"
      ]
@@ -121,7 +120,65 @@
     "mnb = MultinomialNB()\n",
     "y_pred = mnb.fit(X_train_baseline, y_train).predict(X_test_baseline)\n",
     "\n",
-    "print(len(y_train))\n",
+    "print(f1_score(y_test, y_pred, average=None))\n",
+    "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.57471264 0.66597725 0.871875  ]\n",
+      "0.7922948073701842\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here we use counts as a feature. \n",
+    "\n",
+    "# We reuse the normalization function\n",
+    "\n",
+    "def create_count_feature_dict(training_examples):\n",
+    "    curr_pos = 0\n",
+    "    features = {}\n",
+    "\n",
+    "    for example in training_examples:\n",
+    "        tokens = normalize_baseline(example)\n",
+    "\n",
+    "        for token in tokens:\n",
+    "            if token not in features:\n",
+    "                features[token] = curr_pos\n",
+    "                curr_pos += 1\n",
+    "    \n",
+    "    features['UNKNOWN'] = curr_pos\n",
+    "\n",
+    "    return features\n",
+    "\n",
+    "def featurize_count(examples, feature_dict):\n",
+    "    feature_vecs = np.zeros((len(examples), len(feature_dict)))\n",
+    "\n",
+    "    for i in range(len(examples)):\n",
+    "        tokens = normalize_baseline(examples[i])\n",
+    "\n",
+    "        for j in range(len(tokens)):\n",
+    "            if tokens[j] in feature_dict:\n",
+    "                feature_idx = feature_dict[tokens[j]]\n",
+    "                feature_vecs[i][feature_idx] += 1\n",
+    "            else:\n",
+    "                feature_vecs[i][len(feature_dict) - 1] += 1\n",
+    "\n",
+    "    return feature_vecs\n",
+    "\n",
+    "feature_dict_count = create_count_feature_dict(X_train)\n",
+    "X_train_count = featurize_count(X_train, feature_dict_count)\n",
+    "X_test_count = featurize_count(X_test, feature_dict_count)\n",
+    "mnb = MultinomialNB()\n",
+    "y_pred = mnb.fit(X_train_count, y_train).predict(X_test_count)\n",
     "\n",
     "print(f1_score(y_test, y_pred, average=None))\n",
     "print(accuracy_score(y_test, y_pred))"
