--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,127 +61,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def token_one(texts):\n",
+    "    tokenized_texts = []\n",
+    "    for text in texts: \n",
+    "        tokenized_texts.append(word_tokenize(re.sub(r'http\\S+', '', text.lower())))\n",
+    "    return tokenized_texts\n",
+    "\n",
+    "token_funcs = [token_one]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This returns:\n",
+    "#  (1) A map that maps a token to a spot in the feature array. \n",
+    "def build_feat_dict(training_examples):\n",
+    "    curr_pos = 0\n",
+    "    features = {}\n",
+    "\n",
+    "    for example in training_examples:\n",
+    "        for token in example:\n",
+    "            if token not in features:\n",
+    "                features[token] = curr_pos\n",
+    "                curr_pos += 1\n",
+    "    \n",
+    "    return features\n",
+    "\n",
+    "#\n",
+    "# To add a function to the feature\n",
+    "#\n",
+    "# Our baseline features are arrays with binary (0 or 1) values where we note whether or not a particular word has been seen. \n",
+    "def featurize_one(X_train, X_test):\n",
+    "    # Build the dictionary\n",
+    "    feature_dict = build_feat_dict(X_train)\n",
+    "\n",
+    "    # Go through each example and record which words we've seen. \n",
+    "    def get_seen_words(examples):\n",
+    "        features = np.zeros((len(examples), len(feature_dict)))\n",
+    "\n",
+    "        for i in range(len(examples)):\n",
+    "            tokens = examples[i]\n",
+    "            for j in range(len(tokens)):\n",
+    "                if tokens[j] in feature_dict:\n",
+    "                    feature_idx = feature_dict[tokens[j]]\n",
+    "                    features[i][feature_idx] = 1\n",
+    "        return features\n",
+    "\n",
+    "    return get_seen_words(X_train), get_seen_words(X_test)\n",
+    "\n",
+    "feature_funcs = [featurize_one]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_mvb(X_train, X_test, y_train):\n",
+    "    mnb = MultinomialNB()\n",
+    "    return mnb.fit(X_train, y_train).predict(X_test)\n",
+    "\n",
+    "pred_funcs = [classify_mvb]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.55083179 0.66666667 0.88155922]\n",
       "0.8036013400335008\n"
      ]
     }
    ],
    "source": [
-    "# The baseline. We don't try and do anything fancy here. We use this to compare with any improvements we make. \n",
+    "def get_score(token_func, feature_func, pred_func, X_train, y_train, X_test, y_test):\n",
+    "    x_tr_tokens = token_func(X_train)\n",
+    "    x_te_tokens = token_func(X_test)\n",
+    "    x_tr_features, x_te_features = feature_func(x_tr_tokens, x_te_tokens)\n",
+    "    y_pred = pred_func(x_tr_features, x_te_features, y_train)\n",
+    "    return accuracy_score(y_test, y_pred)\n",
     "\n",
-    "def normalize_baseline(text):\n",
-    "    text = text.lower()\n",
-    "    # Remove links. \n",
-    "    text = re.sub(r'http\\S+', '', text)\n",
-    "    return word_tokenize(text)\n",
-    "\n",
-    "# This returns:\n",
-    "#  (1) A map that maps a token to a spot in the feature array. \n",
-    "def create_baseline_feature_dict(training_examples):\n",
-    "    curr_pos = 0\n",
-    "    features = {}\n",
-    "\n",
-    "    for example in training_examples:\n",
-    "        tokens = normalize_baseline(example)\n",
-    "\n",
-    "        for token in tokens:\n",
-    "            if token not in features:\n",
-    "                features[token] = curr_pos\n",
-    "                curr_pos += 1\n",
-    "    \n",
-    "    return features\n",
-    "\n",
-    "# Our baseline features are arrays with binary (0 or 1) values where we note whether or not a particular word has been seen. \n",
-    "#\n",
-    "# If the secord argument is \n",
-    "def featurize_baseline(examples, feature_dict):\n",
-    "    feature_vecs = np.zeros((len(examples), len(feature_dict)))\n",
-    "\n",
-    "    for i in range(len(examples)):\n",
-    "        tokens = normalize_baseline(examples[i])\n",
-    "\n",
-    "        for j in range(len(tokens)):\n",
-    "            if tokens[j] in feature_dict:\n",
-    "                feature_idx = feature_dict[tokens[j]]\n",
-    "                feature_vecs[i][feature_idx] = 1\n",
-    "\n",
-    "    return feature_vecs\n",
-    "\n",
-    "feature_dict = create_baseline_feature_dict(X_train)\n",
-    "X_train_baseline = featurize_baseline(X_train, feature_dict)\n",
-    "X_test_baseline = featurize_baseline(X_test, feature_dict)\n",
-    "mnb = MultinomialNB()\n",
-    "y_pred = mnb.fit(X_train_baseline, y_train).predict(X_test_baseline)\n",
-    "\n",
-    "print(f1_score(y_test, y_pred, average=None))\n",
-    "print(accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.57471264 0.66597725 0.871875  ]\n",
-      "0.7922948073701842\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Here we use counts as a feature. \n",
-    "\n",
-    "# We reuse the normalization function\n",
-    "\n",
-    "def create_count_feature_dict(training_examples):\n",
-    "    curr_pos = 0\n",
-    "    features = {}\n",
-    "\n",
-    "    for example in training_examples:\n",
-    "        tokens = normalize_baseline(example)\n",
-    "\n",
-    "        for token in tokens:\n",
-    "            if token not in features:\n",
-    "                features[token] = curr_pos\n",
-    "                curr_pos += 1\n",
-    "    \n",
-    "    features['UNKNOWN'] = curr_pos\n",
-    "\n",
-    "    return features\n",
-    "\n",
-    "def featurize_count(examples, feature_dict):\n",
-    "    feature_vecs = np.zeros((len(examples), len(feature_dict)))\n",
-    "\n",
-    "    for i in range(len(examples)):\n",
-    "        tokens = normalize_baseline(examples[i])\n",
-    "\n",
-    "        for j in range(len(tokens)):\n",
-    "            if tokens[j] in feature_dict:\n",
-    "                feature_idx = feature_dict[tokens[j]]\n",
-    "                feature_vecs[i][feature_idx] += 1\n",
-    "            else:\n",
-    "                feature_vecs[i][len(feature_dict) - 1] += 1\n",
-    "\n",
-    "    return feature_vecs\n",
-    "\n",
-    "feature_dict_count = create_count_feature_dict(X_train)\n",
-    "X_train_count = featurize_count(X_train, feature_dict_count)\n",
-    "X_test_count = featurize_count(X_test, feature_dict_count)\n",
-    "mnb = MultinomialNB()\n",
-    "y_pred = mnb.fit(X_train_count, y_train).predict(X_test_count)\n",
-    "\n",
-    "print(f1_score(y_test, y_pred, average=None))\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "for token_func in token_funcs:\n",
+    "    for feature_func in feature_funcs:\n",
+    "        for pred_func in pred_funcs:\n",
+    "            print(get_score(token_func, feature_func, pred_func, X_train, y_train, X_test, y_test))\n"
    ]
   }
  ],
