add decision tree method

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -21,6 +21,7 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import tree\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score"
    ]
@@ -136,7 +137,12 @@
     "    mnb = MultinomialNB()\n",
     "    return mnb.fit(X_train, y_train).predict(X_test)\n",
     "\n",
-    "pred_funcs = [classify_mvb]\n"
+    "def classify_dt(X_train, X_test, y_train):\n",
+    "    clf = tree.DecisionTreeClassifier()\n",
+    "    clf = clf.fit(X_train, y_train)\n",
+    "    return clf.predict(X_test)\n",
+    "\n",
+    "pred_funcs = [classify_mvb, classify_dt]\n"
    ]
   },
   {
@@ -148,7 +154,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8036013400335008\n"
+      "0.8036013400335008\n",
+      "0.751675041876047\n"
      ]
     }
    ],
